# humanizer

./: .gitignore  CONTRACTS.md  LICENSE  MONETIZATION.md  Makefile  README.md  STATE.md  WALKTHROUGH_v1_2.md  install.sh  pyproject.toml
.github/workflows/: build-release.yml
addons/google-docs/: .clasp.json.example  .gitignore  Code.gs  README.md  appsscript.json  settings.html  settings.js.html  sidebar.css.html  sidebar.html  sidebar.js
packaging/: RELEASE_NOTES_v1.2.md  build-release.sh  launcher.py  pyinstaller.spec
samples/: greenhalgh.yaml  greenhalgh_corpus.md  ioannidis.yaml  ioannidis_corpus.md  krieger.yaml  krieger_corpus.md
src/sis_caro_humanizer/: __init__.py  calibrate.py  cli.py  cli_benchmark.py  cli_profile.py  cli_review.py  cli_utils.py  config.py  docx_bridge.py  ollama_client.py  text_utils.py
tests/: conftest.py  test_benchmark.py  test_benchmark_corpus.py  test_bibtex.py  test_calibrate.py  test_docx_bridge.py  test_doi.py  test_grammar_filters.py  test_perplexity.py  test_phase3_phase4.py  test_pipeline_e2e.py  test_protected.py  test_research_checklist.py  test_research_citations.py  test_research_prompts.py  test_research_readability.py  test_research_refs_store.py  test_scorer.py  test_serve_v1_3.py  test_serve_v1_4.py  test_serve_v1_5.py  test_serve_v1_6.py
tests/fixtures/: ai_sample.md
tests/test_backends/: test_anthropic.py  test_gemini.py  test_ollama.py  test_openai.py  test_postprocess.py  test_registry.py  test_secrets.py
tests/test_deterministic/: test_anti_cluster.py  test_bluppers.py  test_em_dashes.py  test_runner.py  test_triple_lists.py  test_vocab_swap.py
tests/test_serve/: test_app.py  test_auth.py  test_certs.py  test_runner.py
tests/test_tui/: test_navigation.py  test_smoke.py  test_transform_progress.py
vale_styles/: .vale.ini
vale_styles/Sis-Caro/: ForbiddenOpeners.yml  LLMVocab.yml  (+2 more)
vscode-extension/: .vscodeignore  README.md  humanizer.vsix  package-lock.json  package.json  sis-caro-humanizer-1.0.0.vsix  tsconfig.json
(+158 files in other folders)
