[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sis-caro-humanizer"
version = "0.1.0"
description = "Local AI-detection-evading humanizer for academic writing, profile-driven via Ollama (Gemma 3/4)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Keli Booster", email = "reshpay@gmail.com" }]
keywords = ["humanizer", "ai-detection", "academic-writing", "ollama", "gemma"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing :: Linguistic",
  "Environment :: Console",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "ollama>=0.3",
  "platformdirs>=4.2",
  "language-tool-python>=2.8",
  "proselint>=0.14",
  "regex>=2024.5",
  # v1.2 — bridge daemon (Agent A)
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "cryptography>=42",
  # v1.2 — multi-backend adapters (Agent A)
  "anthropic>=0.30",
  "openai>=1.30",
  "google-generativeai>=0.5",
  "httpx>=0.27",
  # v1.2 — Textual TUI (Agent B)
  "textual>=0.60",
  # v1.2 — .docx input/output support (Agent B)
  "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "pyinstaller>=6.7",
  "scipy>=1.11",
]

[project.scripts]
humanize = "sis_caro_humanizer.cli:app"

[project.urls]
Homepage = "https://github.com/keli-booster/humanizer"
Issues   = "https://github.com/keli-booster/humanizer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sis_caro_humanizer"]

[tool.hatch.build.targets.wheel.force-include]
"vale_styles" = "sis_caro_humanizer/_data/vale_styles"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
